--- a/Search.ipynb
+++ b/Search.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deepth First Search (DFS)"
+    "## Depth First Search (DFS)"
    ]
   },
   {
@@ -314,7 +314,6 @@
     "\n",
     "def A_star(graph_g,h,start,goal):\n",
     "    explored = []\n",
-    "    import queue as pq\n",
     "    q = pq.PriorityQueue()\n",
     "    q.put((h[start],start))\n",
     "    parents = {(h[start],start): None}\n",
